	PR c++/16964 	* parser.c (cp_parser_class_specifier): Robustify.

PR c++/16904
	* pt.c (tsubst_copy_and_build): Complain about invalid
	qualification.

	PR c++/16929
	* pt.c (tsubst_default_argument): Clear out current_class_ptr and
	current_class_ref while tsubsting.

	PR c++/16964
	* g++.dg/parse/error16.C: New test.

	PR c++/16904
	* g++.dg/template/error14.C: New test.

	PR c++/16929
	* g++.dg/template/error15.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@85824 138bc75d-0d04-0410-961f-82ee72b054a4